@@ -4,6 +4,7 @@ Release 2.4
 #214 Immutable constraint objects
 #218 NPE in LR client when HTTP request fails with something different from LinkRestException
 #220 Support multi-component paths for root "mapBy"
+#222 Support for Java 8 date time types in the metadata requests
 
 Release 2.3
 
